# plano-legacy

./: com.github.diegoivanme.plano.json  meson.build
data/: com.github.diegoivanme.plano.appdata.xml.in  com.github.diegoivanme.plano.desktop.in  com.github.diegoivanme.plano.gschema.xml
po/: POTFILES
src/: #window.ui#  application.js  com.github.diegoivanme.plano.src.gresource.xml  main.js  meson.build  utils.js  window.js  window.ui  window.ui~
